--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                 <h3>OFF</h3>
             </div>
         </div>
-        <div class="box chrous">
+        <div class="box chorus">
             <h1 class="box-title">Chorus <img class="box-img" src="img/chorus.png" alt=""></h1>
             <div class="status">
                 <h3>OFF</h3>
