--- a/public/index.html
+++ b/public/index.html
@@ -6,59 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floral Status</title>
     <link rel="stylesheet" href="styles.css">
+
+  <meta property="og:title" content="Floral Status">
+  <meta property="og:description" content="Floral Status permet de voir l'état des serveurs de Modded.fr">
+  <meta property="og:image" content="https://floral.origaming.ch/public/img/status.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://floral.origaming.ch">
+  <meta property="og:type" content="website">
 </head>
 
 <body>
     <img class="logo" src="../favicon.ico" alt="Floral group logo">
     <h1 class="title">Status des serveurs de Modded</h1>
     <h3 class="floral-group">by Floral Group</h4>
-    <img class="discord" src="img/discord.svg" alt="Discord" onclick="discord()">
-    <h3 class="credits">by Origaming</h3>
-    <div class="container">
-        <div class="box granite">
-            <h1 class="box-title">Granite <img class="box-img" src="img/granite.png" alt=""></h1>
-            <div class="status">
-                <h3>OFF</h3>
+        <img class="discord" src="img/discord.svg" alt="Discord" onclick="discord()">
+        <h3 class="credits">by Origaming</h3>
+        <div class="container">
+            <div class="box granite">
+                <h1 class="box-title">Granite <img class="box-img" src="img/granite.png" alt=""></h1>
+                <div class="status">
+                    <h3>OFF</h3>
+                </div>
+            </div>
+            <div class="box andesite">
+                <h1 class="box-title">Andesite <img class="box-img" src="img/andesite.png" alt=""></h1>
+                <div class="status">
+                    <h3>OFF</h3>
+                </div>
+            </div>
+            <div class="box emeraude">
+                <h1 class="box-title">Emeraude <img class="box-img" src="img/emeraude.png" alt=""></h1>
+                <div class="status">
+                    <h3>OFF</h3>
+                </div>
+            </div>,
+            <div class="box magma">
+                <h1 class="box-title">Magma <img class="box-img" src="img/magma.gif" alt=""></h1>
+                <div class="status">
+                    <h3>OFF</h3>
+                </div>
+            </div>
+            <div class="box obsidienne">
+                <h1 class="box-title">Obsidienne <img class="box-img" src="img/obsidienne.gif" alt=""></h1>
+                <div class="status">
+                    <h3>OFF</h3>
+                </div>
+            </div>
+            <div class="box quartz">
+                <h1 class="box-title">Quartz <img class="box-img" src="img/quartz.png" alt=""></h1>
+                <div class="status">
+                    <h3>OFF</h3>
+                </div>
+            </div>
+            <div class="box chorus">
+                <h1 class="box-title">Chorus <img class="box-img" src="img/chorus.png" alt=""></h1>
+                <div class="status">
+                    <h3>OFF</h3>
+                </div>
             </div>
         </div>
-        <div class="box andesite">
-            <h1 class="box-title">Andesite <img class="box-img" src="img/andesite.png" alt=""></h1>
-            <div class="status">
-                <h3>OFF</h3>
-            </div>
-        </div>
-        <div class="box emeraude">
-            <h1 class="box-title">Emeraude <img class="box-img" src="img/emeraude.png" alt=""></h1>
-            <div class="status">
-                <h3>OFF</h3>
-            </div>
-        </div>,
-        <div class="box magma">
-            <h1 class="box-title">Magma <img class="box-img" src="img/magma.gif" alt=""></h1>
-            <div class="status">
-                <h3>OFF</h3>
-            </div>
-        </div>
-        <div class="box obsidienne">
-            <h1 class="box-title">Obsidienne <img class="box-img" src="img/obsidienne.gif" alt=""></h1>
-            <div class="status">
-                <h3>OFF</h3>
-            </div>
-        </div>
-        <div class="box quartz">
-            <h1 class="box-title">Quartz <img class="box-img" src="img/quartz.png" alt=""></h1>
-            <div class="status">
-                <h3>OFF</h3>
-            </div>
-        </div>
-        <div class="box chorus">
-            <h1 class="box-title">Chorus <img class="box-img" src="img/chorus.png" alt=""></h1>
-            <div class="status">
-                <h3>OFF</h3>
-            </div>
-        </div>
-    </div>
-    <script src="index.js"></script>
+        <script src="index.js"></script>
 </body>
 
 </html>
